--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+#more details here https://youtu.be/7ll-rkLCtyk?t=1219
+org.gradle.caching=true
 
 APP_VERSION_CODE=42
 APP_VERSION_NAME=0.4.2
@@ -34,4 +36,3 @@ LEAKCANARY_VERSION=1.5.4
 JUNIT_VERSION=4.12
 JAVA_MAIL_VERSION=1.6.0
 GLIDE_VERSION=4.4.0
-
