--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -166,6 +166,10 @@
         <service
             android:name=".service.attachment.AttachmentDownloadManagerService"
             android:exported="false" />
+
+        <service
+            android:name=".service.actionqueue.ActionQueueIntentService"
+            android:exported="false" />
     </application>
 
 </manifest>
