Added a test for SplashActivity

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -144,6 +144,7 @@ dependencies {
 
     androidTestImplementation "com.android.support.test.espresso:espresso-core:${ESPRESSO_VERSION}"
     androidTestImplementation "com.android.support.test.espresso:espresso-contrib:${ESPRESSO_VERSION}"
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:${ESPRESSO_VERSION}"
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
 
     testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${LEAKCANARY_VERSION}"
