--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -170,6 +170,10 @@
         <service
             android:name=".service.actionqueue.ActionQueueIntentService"
             android:exported="false" />
+
+        <service
+            android:name=".service.JsBackgroundService"
+            android:exported="false" />
     </application>
 
 </manifest>
