--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,6 @@
 # © 2016-2018 FlowCrypt Limited. Limitations apply. Contact human@flowcrypt.com
 # Contributors: DenBond7
 #
-
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
@@ -17,7 +16,7 @@
 # org.gradle.parallel=true
 #more details here https://youtu.be/7ll-rkLCtyk?t=1219
 org.gradle.caching=true
-
+#Global
 APP_VERSION_CODE=60
 APP_VERSION_NAME=0.6.0
 BUILD_TOOLS_VERSION=27.0.2
@@ -25,7 +24,8 @@ COMPILE_SDK_VERSION=26
 TARGET_SDK_VERSION=26
 MIN_SDK_VERSION=21
 JAVA_SOURCE_COMPATIBILITY=1.7
-ANDROID_SUPPORT_VERSION=27.0.2
+#https://developer.android.com/topic/libraries/support-library/revisions.html
+ANDROID_SUPPORT_VERSION=27.1.0
 ANDROID_GRADLE_VERSION=3.0.1
 PLAY_SERVICES_VERSION=11.8.0
 ESPRESSO_VERSION=3.0.1
