--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: android
 android:
         components:
                 - platform-tools
-                - build-tools-27.0.2
+                - build-tools-27.0.3
                 - android-26
                 - extra-android-m2repository
 script:
-        - ./gradlew assembleDebug
+        - ./gradlew assembleProductionDebug
 before_install:
         - chmod +x gradlew
