Added a search logic to EmailManagerActivity. Created a template of SearchMessagesActivity. Refactored code.| #222

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -164,6 +164,10 @@
             android:name=".ui.activity.CreatePrivateKeyActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".ui.activity.SearchMessagesActivity"
+            android:screenOrientation="portrait" />
+
         <!-- Providers -->
         <provider
             android:name=".database.provider.SecurityContentProvider"
