--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -229,6 +229,7 @@ dependencies {
     implementation "com.android.support:preference-v14:${ANDROID_SUPPORT_VERSION}"
     implementation "com.android.support:cardview-v7:${ANDROID_SUPPORT_VERSION}"
     implementation "com.android.support:customtabs:${ANDROID_SUPPORT_VERSION}"
+    implementation "com.android.support:recyclerview-v7:${ANDROID_SUPPORT_VERSION}"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:multidex:1.0.3'
     implementation "com.android.support.test.espresso:espresso-idling-resource:${ESPRESSO_VERSION}"
