Renamed AddContactActivity to ImportPgpContactActivity.| #239

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -169,7 +169,7 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ui.activity.AddContactActivity"
+            android:name=".ui.activity.ImportPgpContactActivity"
             android:label="@string/add_contact"
             android:screenOrientation="portrait" />
 
