Fixed open INBOX when tapping on notifications. |#89

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity
             android:name=".ui.activity.EmailManagerActivity"
             android:label="@string/loading"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait" />
 
         <activity
