Added MarkMessagesAsOldBroadcastReceiver to handle the delete intent of notifications.| #89

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -229,6 +229,8 @@
             android:exported="false"
             android:label="Sync service"
             android:permission="android.permission.BIND_JOB_SERVICE" />
+
+        <receiver android:name=".broadcastreceivers.MarkMessagesAsOldBroadcastReceiver" />
     </application>
 
 </manifest>
