Added showing the message details when a user taps on the notification.| #89

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
 
         <activity
             android:name=".ui.activity.MessageDetailsActivity"
+            android:parentActivityName=".ui.activity.EmailManagerActivity"
             android:screenOrientation="portrait" />
 
         <activity
