--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -236,7 +236,7 @@
 
         <!--This service will be used for syncing (JobScheduler logic)-->
         <service
-            android:name=".jobscheduler.CheckNewMessagesJobService"
+            android:name=".jobscheduler.SyncJobService"
             android:exported="false"
             android:label="Sync service"
             android:permission="android.permission.BIND_JOB_SERVICE" />
