Added using backup options after the pass phrase was change.| #252

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -127,7 +127,7 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ui.activity.settings.BackupSettingsActivity"
+            android:name=".ui.activity.settings.SearchBackupsInEmailActivity"
             android:label="@string/backups"
             android:screenOrientation="portrait" />
 
