--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- android.permission.RECEIVE_BOOT_COMPLETED will be used by JobScheduler to persists jobs after the device reboot -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <!-- android.permission.WAKE_LOCK will be used by classes which extend JobIntentService -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".FlowCryptApplication"
@@ -226,6 +228,7 @@
         <!-- Services -->
         <service
             android:name=".service.EmailAndNameUpdaterService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
             android:exported="false" />
 
         <service
@@ -242,6 +245,7 @@
 
         <service
             android:name=".service.actionqueue.ActionQueueIntentService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
             android:exported="false" />
 
         <service
