--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ captures/
 FlowCrypt/keystore.properties
 
 .idea/misc.xml
+.idea/caches/build_file_checksums.ser
+FlowCrypt/src/main/assets/.idea/vcs.xml
+FlowCrypt/src/main/assets/.idea/workspace.xml
