--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,25 @@ allprojects {
         google()
         jcenter()
     }
+
+    plugins.apply('checkstyle')
+
+    task('checkstyle', type: Checkstyle) {
+        configFile rootProject.file('checkstyle.xml')
+        source 'src/main/java'
+        ignoreFailures false
+        showViolations true
+        include '**/*.java'
+
+        classpath = files()
+    }
+
+    afterEvaluate {
+        Task task = tasks.findByName('check');
+        if(task != null){
+            task.dependsOn('checkstyle')
+        }
+    }
 }
 
 task clean(type: Delete) {
