Added checks for class design.| #352

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ allprojects {
 
     task('checkstyle', type: Checkstyle) {
         configFile rootProject.file('checkstyle.xml')
+        configProperties.checkStyleConfigDir = rootProject.rootDir
         source 'src/main/java'
         ignoreFailures false
         showViolations true
