Modified checkstyle settings. Added checkstyle to the script section in the travis settings. | #352

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ android:
                 - android-28
                 - extra-android-m2repository
 script:
-        - ./gradlew assembleProductionDebug
+        - ./gradlew checkstyle assembleProductionDebug
 before_install:
         - chmod +x gradlew
