--- a/build.gradle
+++ b/build.gradle
@@ -28,21 +28,23 @@ allprojects {
 
     checkstyle {
         configFile rootProject.file('checkstyle.xml')
-        toolVersion '8.14';
+        toolVersion '8.14'
+        showViolations true
+        ignoreFailures false
     }
 
     task('checkstyle', type: Checkstyle) {
         configProperties.checkStyleConfigDir = rootProject.rootDir
+        source 'src/androidTest/java'
+        source 'src/debug/java'
         source 'src/main/java'
-        ignoreFailures false
-        showViolations true
+        source 'src/test/java'
         include '**/*.java'
-
         classpath = files()
     }
 
     afterEvaluate {
-        Task task = tasks.findByName('check');
+        Task task = tasks.findByName('check')
         if (task != null) {
             task.dependsOn('checkstyle')
         }
