Completed code refactoring for com.flowcrypt.email.ui.| #352

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -95,7 +95,7 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ui.activity.ImportPublicKeyForPgpContactActivity"
+            android:name=".ui.activity.ImportPublicKeyActivity"
             android:screenOrientation="portrait" />
 
         <activity
