--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -208,6 +208,10 @@
             android:label="@string/security"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".ui.activity.CorruptedStorageActivity"
+            android:launchMode="singleTop" />
+
         <!-- Providers -->
         <provider
             android:name=".database.provider.SecurityContentProvider"
@@ -274,6 +278,8 @@
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <receiver android:name=".broadcastreceivers.MarkMessagesAsOldBroadcastReceiver" />
+
+        <receiver android:name=".broadcastreceivers.CorruptedStorageBroadcastReceiver" />
     </application>
 
 </manifest>
