--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ FlowCrypt/keystore.properties
 .idea/caches/build_file_checksums.ser
 FlowCrypt/src/main/assets/.idea/vcs.xml
 FlowCrypt/src/main/assets/.idea/workspace.xml
+
+release/*.apk
