--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -32,7 +32,12 @@
         <activity
             android:name=".ui.activity.SplashActivity"
             android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.APP_EMAIL" />
+            </intent-filter>
         </activity>
 
         <activity
@@ -214,14 +219,7 @@
         <activity
             android:name=".ui.activity.NodeSplashActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.Launcher">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-                <category android:name="android.intent.category.APP_EMAIL" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/AppTheme.Launcher" />
 
         <!-- Providers -->
         <provider
