--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -240,7 +240,7 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:${ESPRESSO_VERSION}"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:${ESPRESSO_VERSION}"
     androidTestImplementation "androidx.test.espresso:espresso-intents:${ESPRESSO_VERSION}"
-    androidTestImplementation "androidx.test.ext:junit:1.0.0"
+    androidTestImplementation "androidx.test.ext:junit:1.1.0"
 
     testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${LEAKCANARY_VERSION}"
     testImplementation "junit:junit:${JUNIT_VERSION}"
@@ -248,17 +248,17 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     implementation "androidx.legacy:legacy-support-v4:${ANDROIDX_BASE_VERSION}"
-    implementation 'androidx.appcompat:appcompat:1.0.1'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation "androidx.legacy:legacy-preference-v14:${ANDROIDX_BASE_VERSION}"
     implementation "androidx.cardview:cardview:${ANDROIDX_BASE_VERSION}"
     implementation "androidx.browser:browser:${ANDROIDX_BASE_VERSION}"
     implementation "androidx.recyclerview:recyclerview:${ANDROIDX_BASE_VERSION}"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.multidex:multidex:2.0.0'
-    implementation "androidx.test.espresso:espresso-idling-resource:${ESPRESSO_VERSION}"
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.1.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
-    implementation "com.google.android.gms:play-services-base:${PLAY_SERVICES_VERSION}"
+    implementation 'com.google.android.gms:play-services-base:16.1.0'
     implementation "com.google.android.gms:play-services-auth:${PLAY_SERVICES_VERSION}"
     implementation "com.google.android.material:material:${ANDROIDX_BASE_VERSION}"
 
