--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
   ~ Contributors: DenBond7
   -->
 
+<!--
+  ~ © 2016-2019 FlowCrypt Limited. Limitations apply. Contact human@flowcrypt.com
+  ~ Contributors: DenBond7
+  -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.flowcrypt.email">
 
@@ -31,7 +36,8 @@
 
         <activity
             android:name=".ui.activity.SplashActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -215,11 +221,6 @@
         <activity
             android:name=".ui.activity.NodeTestActivity"
             android:screenOrientation="portrait" />
-
-        <activity
-            android:name=".ui.activity.NodeSplashActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.Launcher" />
 
         <!-- Providers -->
         <provider
