--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -1,8 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~ © 2016-2019 FlowCrypt Limited. Limitations apply. Contact human@flowcrypt.com
-  ~ Contributors: DenBond7
-  -->
-
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ © 2016-2019 FlowCrypt Limited. Limitations apply. Contact human@flowcrypt.com
   ~ Contributors: DenBond7
