--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ captures/
 FlowCrypt/keystore.properties
 
 .idea/misc.xml
+.idea/caches/*
 .idea/caches/build_file_checksums.ser
 FlowCrypt/src/main/assets/.idea/vcs.xml
 FlowCrypt/src/main/assets/.idea/workspace.xml
