updates to build / release mechanism | #422

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -223,7 +223,7 @@ android {
     }
 
     tasks.whenTaskAdded { task ->
-        if (task.name == 'assembleProductionRelease') {
+        if (task.name == 'assembleProdRelease') {
             if (project.hasProperty('runtimeSetup')) {
                 task.dependsOn inputKeyPasswords
             }
